--- a/docroot/sites/all/themes/informea.theme/less/pages/contacts-hub.less
+++ b/docroot/sites/all/themes/informea.theme/less/pages/contacts-hub.less
@@ -8,7 +8,7 @@
   }
   .views-field {
     color: @regional-page-gray;
-    margin-top: .2rem;
+    margin-top: .5rem;
     &, & * { display: inline; }
     + .views-field {
       > .field-content:not(:empty):before {
